[gd_scene load_steps=4 format=2]

[ext_resource path="res://Sprites/Guns/W_73_Youth_Knife.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Guns/Hold/W_00_Gun_Melee_Hold.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 9.78757
height = 13.2813

[node name="W_73_Youth_Knife" type="Node2D"]
script = ExtResource( 2 )
gun_num = 73
melee_damage = 33
dmg_type = "Blade"

[node name="POS_Gun" type="Node2D" parent="."]

[node name="Axe" type="Sprite" parent="POS_Gun"]
position = Vector2( 2.56311, -7.68937 )
rotation = -1.5708
texture = ExtResource( 1 )

[node name="Throw_Pos" type="Position2D" parent="."]
position = Vector2( 24, 0 )

[node name="Throw_Ray" type="RayCast2D" parent="."]
position = Vector2( -8, 0 )
enabled = true
cast_to = Vector2( 44, 0 )
collision_mask = 4278193928

[node name="Melee_Area" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4278618752

[node name="CollisionShape2D" type="CollisionShape2D" parent="Melee_Area"]
position = Vector2( 24.0405, 0 )
shape = SubResource( 1 )
disabled = true

[connection signal="body_entered" from="Melee_Area" to="." method="_on_Melee_Area_body_entered"]
